     indexed/unindexed, so you can grep on that to narrow the results.

     The VCS tagging mechanism has changed.  Instead of making a tag for
     every commit, a tag is made only when you specify the --tag option.
     You can still put date/time placeholders in your tag name.

     The 'noclobber' configuration setting has been removed, since it
     was never implemented anyway.

     The --force option of the 'update' command for pinto-admin is no
     longer supported.  I'm thinking of changing the meaning of "force"
     and might bring it back in a future release.

     pinto-admin is less noisy.  You won't see any output on the
     command line unless you set the --verbose switch or there is some
     kind of error or warning.  Setting the --quiet switch will still
     suppress any non-fatal warnings.

     * Bug Fixes:

     Fixed bug where Pinto might blow up with 'too many args' error
     the first time you update from a CPAN mirror.


0.024     2011-09-01 15:23:48 America/Los_Angeles

     Added a "version" command to pinto-admin

     General code refactoring

     No interface changes

0.023     2011-08-31 14:18:49 America/Los_Angeles

     * Interface Changes:

     The "remove" operation now works on distribution names, rather
     than package names.  You must specify the full name of the
     distribution, including version number and extension.

     * Other Good Stuff:

     Wrote the manuals for each of the pinto-admin commands.
     Say `pinto-admin COMMAND --man` to see them.

0.022     2011-08-31 01:31:04 America/Los_Angeles

     * Interface Changes:

     You no longer need to specify the Subversion trunk in your
     pinto.ini (if you were using Pinto::Store::VCS::Svn).  The
     location of your Pinto repository in subversion is implicit in
     the `svn info` of the working copy.  Secondly, the "create"
     action no longer takes care of making a location in Subversion