@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More (tests => 12);
+use Test::More (tests => 14);
 use Test::Exception;
 
 use Path::Class;
@@ -21,8 +21,9 @@ use Pinto::Config;
         repos     => 'nowhere',
         sources   => 'http://cpan.perl.org',
         store     => 'Pinto::Store',
-        nocleanup => 0,
+        cleanup   => 0,
         noinit    => 0,
+        devel     => 0,
     );
 
     my $cfg = Pinto::Config->new(repos => 'nowhere');
@@ -35,8 +36,9 @@ use Pinto::Config;
         repos     => 'nowhere',
         sources   => 'http://cpan.pair.com  http://metacpan.org',
         store     => 'Pinto::Store::VCS::Git',
-        nocleanup => 1,
+        cleanup   => 1,
         noinit    => 1,
+        devel     => 1,
     );
 
     $cfg = Pinto::Config->new(%custom_cases);
